--- a/css/global.side-bar.css
+++ b/css/global.side-bar.css
@@ -1,4 +1,5 @@
 .side-bar_nav {
+  display: none;
   position: fixed;
   top: 0;
   left: 0;
@@ -6,12 +7,54 @@
   height: 100vh;
   background: var(--background-main-color);
   color: var(--inactive-color);
-
   z-index: 1000;
 }
 
-/* overlay: cover the page except the sidebar (treat as always-open) */
-.overlay {
+.side-bar_item {
+  padding: 17.5px 0 17.5px 0;
+  position: relative;
+}
+
+.side-bar_item--active {
+  position: relative;
+}
+
+.side-bar_item--active::before {
+  content: '';
+  position: absolute;
+  left: -30px;
+  top: 0;
+  bottom: 0;
+  width: 6px;
+  background-color: var(--active-color);
+  border-radius: 0 6px 6px 0;
+}
+
+.side-bar_items-list {
+  padding: 10px 30px 30px 30px;
+}
+
+.side-bar_icon {
+  height: 20px;
+  width: 20px;
+}
+
+.side-bar_logo-container {
+  margin: 26px 20px 20px 27px;
+}
+
+.side-bar_logo {
+  height: 36px;
+  width: 36px;
+}
+
+.side-bar_logo_text {
+  font-family: var(--icon-font-family), sans-serif;
+  font-size: 25px;
+  font-weight: 700;
+  color: var(--primary-text-color);
+}
+.side-bar_overlay {
   position: fixed;
   top: 0;
   right: 0;
