--- a/css/global.cards.css
+++ b/css/global.cards.css
@@ -1,1 +1,18 @@
 @import "global.cards-template.css";
+.cards-title {
+  font-family: var(--main-font-family), sans-serif;
+  font-size: 16px;
+  font-weight: 600;
+  color: var(--primary-text-color);
+  margin: 22px 20px 12px 25px;
+}
+
+.cards-carousel {
+  display: flex;
+  flex-direction: row;
+  overflow: hidden;
+  gap : 20px;
+  margin: 15px 0px 20px 25px;
+}
+
+
